--- a/res/values/rr_strings.xml
+++ b/res/values/rr_strings.xml
@@ -2590,4 +2590,15 @@
     <string name="nav_button_sounds_title">Touch sounds</string>
     <string name="nav_button_sounds_summary">Play click sound when tapping smartbar.Ringer/loud mode only</string>
 
+    <!-- Category title for Charging sounds -->
+    <string name="power_notifications_category_title">Charging sounds</string>
+    <!-- Sound settings, Charging sounds enable/disable, setting check box label -->
+    <string name="power_notifications_enable_title">Enable</string>
+    <string name="power_notifications_enable_summary">Play a sound when connecting or disconnecting the charger</string>
+    <!-- Sound settings, Charging sounds vibrate enable/disable, setting check box label -->
+    <string name="power_notifications_vibrate_title">Vibrate</string>
+    <!-- Sound settings, Charging sounds ringtone selection, preference label -->
+    <string name="power_notifications_ringtone_title">Notification sound</string>
+    <!-- Sound settings, charging sounds label for ringtone == none -->
+    <string name="power_notifications_ringtone_silent">Silent</string>
 </resources>
