--- a/res/xml/other_sound_settings.xml
+++ b/res/xml/other_sound_settings.xml
@@ -29,11 +29,6 @@
             android:key="screen_locking_sounds"
             android:title="@string/screen_locking_sounds_title" />
 
-    <!-- Charging sounds -->
-    <SwitchPreference
-            android:key="charging_sounds"
-            android:title="@string/charging_sounds_title" />
-
     <!-- Docking sounds -->
     <SwitchPreference
             android:key="docking_sounds"
@@ -109,4 +104,24 @@
         android:summary="@string/safe_headset_volume_summary"
         android:persistent="false"
         android:defaultValue="true" />
+
+    <PreferenceCategory
+            android:title="@string/power_notifications_category_title"/>
+
+    <SwitchPreference
+            android:key="power_notifications"
+            android:title="@string/power_notifications_enable_title"
+            android:summary="@string/power_notifications_enable_summary"
+            android:defaultValue="false" />
+
+    <SwitchPreference
+            android:key="power_notifications_vibrate"
+            android:title="@string/power_notifications_vibrate_title"
+            android:defaultValue="false"
+            android:dependency="power_notifications" />
+
+    <Preference
+            android:key="power_notifications_ringtone"
+            android:title="@string/power_notifications_ringtone_title"
+            android:dependency="power_notifications" />
 </PreferenceScreen>
