--- a/res/values/rr_strings.xml
+++ b/res/values/rr_strings.xml
@@ -2464,4 +2464,8 @@
 
     <!-- Bluetooth accept all files -->
     <string name="bluetooth_accept_all_files">Accept all file types</string>
+
+    <!-- SuperSU header name - the app hides itself from launcher based on this resource name being present in com.android.settings -->
+    <string name="supersu_title">SuperSU</string>
+    <string name="supersu_dashboard_summary">Control your SuperSU settings</string> 
 </resources>
