(2/2) Settings: allow to toggle smart cover wake
  * enable by default

Change-Id: I1f97dc1a945520d2b563cdafdb19becad23cb993
Signed-off-by: Alexander Martinz <eviscerationls@gmail.com>

--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -144,6 +144,12 @@
                 android:summary="%s"
                 android:title="@string/display_vr_pref_title" />
 
+    <!-- Smart cover -->
+    <PreferenceScreen
+        android:key="smart_cover"
+        android:title="@string/smart_cover_title"
+        android:fragment="com.android.settings.temasek.SmartCoverSettings" />
+
     </PreferenceCategory>
 
         <PreferenceCategory
