--- a/res/values/rr_strings.xml
+++ b/res/values/rr_strings.xml
@@ -2714,4 +2714,12 @@
     <string name="sms_security_check_limit_summary">Display an alert dialog to prevent applications from sending SMS messages too frequently. Current limit: %d messages in 1 minute</string>
     <string name="sms_security_check_limit_default">30 (Default)</string>
     <string name="sms_security_check_limit_unlimited">None</string>
+
+    <!-- Smart cover -->
+    <string name="smart_cover_title">Smart cover</string>
+    <string name="lid_settings_title">Lid</string>
+    <string name="lid_controls_sleep_title">Control sleep</string>
+    <string name="lid_controls_sleep_summary">Turn screen off when lid closes</string>
+    <string name="lid_controls_wake_title">Control wake</string>
+    <string name="lid_controls_wake_summary">Turn screen on when lid opens</string>
 </resources>
