Introduce Android ID Changer
Accessible in development settings

Change-Id: I20322470266522b639c9cb0b912a48aaccea0309
Signed-off-by: Simao Gomes Viana <xdevs23@outlook.com>

--- a/res/values/rr_strings.xml
+++ b/res/values/rr_strings.xml
@@ -2499,4 +2499,10 @@
     <!-- Disable Signature Verification -->
     <string name="disable_signature_title">Disable Signature Verification</string>
     <string name="disable_signature_summary">Allows you to install apps with different signature</string>
+
+    <!-- Users -> Change Android ID -->
+    <string name="usersettings_change_android_id">Change Android ID</string>
+    <string name="usersettings_change_android_id_text">
+        Enter your desired Android ID here or leave the field blank to generate a new one.
+    </string>
 </resources>
