Enable storage manager settings.

--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -90,7 +90,7 @@
     <bool name="config_video_call_datausage_enable">false</bool>
 
     <!-- If the Storage Manager settings are enabled. -->
-    <bool name="config_storage_manager_settings_enabled">false</bool>
+    <bool name="config_storage_manager_settings_enabled">true</bool>
 
     <!-- Display ro.product.name above Device model -->
     <bool name="config_displayDeviceName">false</bool>
