Development Settings: Add QS to toggle Disable HW Overlays
Change-Id: I01931e9a12b9c87aa48a60ce7a08672873b22c78

--- a/res/values/rr_strings.xml
+++ b/res/values/rr_strings.xml
@@ -2438,4 +2438,7 @@
     <!-- EdgeGesture service -->
     <string name="edge_gesture_service_title">Block gesture touch events</string>
     <string name="edge_gesture_service_summary">Don\'t send touch events for navigation and status bar gestures to apps</string>
+
+    <!-- Development QS -->
+    <string name="qs_disable_hw_overlays">@string/disable_overlays</string>
 </resources>
