Settings: Add preference for EdgeGesture service.
Change-Id: I0325b0a9aa6eb943b48483aebe151726a2c64ac4

--- a/res/values/rr_strings.xml
+++ b/res/values/rr_strings.xml
@@ -2434,4 +2434,8 @@
 
     <!-- App details: open play store link if app is user installed -->
     <string name="app_play_store">Google Play</string>
+
+    <!-- EdgeGesture service -->
+    <string name="edge_gesture_service_title">Block gesture touch events</string>
+    <string name="edge_gesture_service_summary">Don\'t send touch events for navigation and status bar gestures to apps</string>
 </resources>
