--- a/res/xml/development_prefs.xml
+++ b/res/xml/development_prefs.xml
@@ -454,4 +454,12 @@
             android:defaultValue="false" />
      </PreferenceCategory>
 
+    <!--  MediaScanner behavior on boot  -->
+    <ListPreference
+        android:key="media_scanner_on_boot"
+        android:dialogTitle="@string/media_scanner_on_boot_title"
+        android:title="@string/media_scanner_on_boot_title"
+        android:entries="@array/media_scanner_on_boot_entries"
+        android:entryValues="@array/media_scanner_on_boot_values" />
+
 </PreferenceScreen>
