--- a/res/xml/device_info_storage_volume.xml
+++ b/res/xml/device_info_storage_volume.xml
@@ -19,5 +19,15 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/storage_settings"
     settings:keywords="@string/keywords_storage">
+    
+    <!-- Partition info -->
+    <Preference
+        android:icon="@drawable/ic_tab_selected_sdcard"
+        android:title="@string/partition_info_title">
+        <intent
+            android:action="com.android.action.MAIN"
+            android:targetPackage="com.android.settings"
+            android:targetClass="com.android.settings.PartitionInfo" />
+    </Preference>   
 
 </PreferenceScreen>
