--- a/res/values/rr_arrays.xml
+++ b/res/values/rr_arrays.xml
@@ -178,6 +178,7 @@
 	<item>@string/status_bar_battery_style_icon_portrait</item>
 	<item>@string/status_bar_battery_style_solid</item>
 	<item>@string/status_bar_battery_style_circle</item>
+	<item>@string/status_bar_battery_style_aoscp</item>
 	<item>@string/status_bar_battery_style_hidden</item>
 	<item>@string/status_bar_battery_style_icon_landscape</item>
 	<item>@string/status_bar_battery_style_text</item>
@@ -190,12 +191,14 @@
         <item>3</item>
         <item>4</item>
         <item>5</item>
+        <item>6</item>
      </string-array>
 
     <string-array name="battery_tile_style_entries" translatable="false">
         <item>@string/status_bar_battery_style_icon_portrait</item>
         <item>@string/status_bar_battery_style_solid</item>
         <item>@string/status_bar_battery_style_circle</item>
+        <item>@string/status_bar_battery_style_aoscp</item>
         <item>@string/status_bar_battery_style_icon_landscape</item>
     </string-array>
 
@@ -203,7 +206,8 @@
         <item>0</item>
         <item>1</item>
         <item>2</item>
-        <item>4</item>
+        <item>3</item>
+        <item>5</item>
     </string-array>
 
     <string-array name="text_charging_symbol_entries" translatable="false">
