BatteryStyles: Add AOSCP Circle battery icon
This commit adds the menu item required to select the new
"AOSCP Circle" battery style. Other styles have been repositioned
to reflect this change

original commit - https://github.com/CypherOS/packages_apps_Settings/commit/b143e2cb3e65efcd0b56ccb2fb89abff5606575c

Change-Id: I16adb192d72d1761c1981d9301c3f7855893760a

--- a/res/values/rr_strings.xml
+++ b/res/values/rr_strings.xml
@@ -2505,4 +2505,6 @@
     <string name="usersettings_change_android_id_text">
         Enter your desired Android ID here or leave the field blank to generate a new one.
     </string>
+
+	<string name="status_bar_battery_style_aoscp">Cio</string> 
 </resources>
