Safe headset volume option (2 of 2)
Add switch for Safe headset volume.

Adapted for RR by Ashok Soni.

Change-Id: Ic463cc03edba3d6f8c34582aa0a5f87d051e97fb
Signed-off-by: STELIX <ssspinni@gmail.com>
Signed-off-by: Ashok Soni <ashok.soni@gmail.com>

--- a/res/xml/other_sound_settings.xml
+++ b/res/xml/other_sound_settings.xml
@@ -102,4 +102,11 @@
             android:entryValues="@array/less_notification_sounds_values"
             android:persistent="false" />
 
+    <!-- Safe Headset Volume Switch -->
+    <SwitchPreference
+        android:key="safe_headset_volume"
+        android:title="@string/safe_headset_volume_title"
+        android:summary="@string/safe_headset_volume_summary"
+        android:persistent="false"
+        android:defaultValue="true" />
 </PreferenceScreen>
