--- a/res/values/rr_strings.xml
+++ b/res/values/rr_strings.xml
@@ -20,6 +20,7 @@
 
     <!-- General -->
     <string name="ok">Okay</string>
+    <string name="cancel">Cancel</string>
     <string name="reset">Reset</string>
     <string name="dlg_reset_rr">RR</string>
     <string name="dlg_reset_android">Default</string>
@@ -2476,4 +2477,10 @@
     <!-- OpenDelta -->
    <string name="deltaupdate_settings_title">Delta Updates</string>
    <string name="deltaupdate_settings_title_summary">Configure Settings</string>
+
+    <!-- Safe headset volume restore checkbox -->
+    <string name="attention">Attention</string>
+    <string name="safe_headset_volume_title">Safe headset volume</string>
+    <string name="safe_headset_volume_summary">Prevent loud volume levels when headset is first plugged in</string>
+    <string name="safe_headset_volume_warning_dialog_text">Listening at high volume for long periods may damage your hearing. Disable it with caution.</string>
 </resources>
