Add Phh Superuser dashboard tile
credit to @tsubus for his setting dashboard implementation

Change-Id: I764c99536ace64983d016d73ff38a0a13c400fb0

--- a/res/values/rr_strings.xml
+++ b/res/values/rr_strings.xml
@@ -2483,4 +2483,8 @@
     <string name="safe_headset_volume_title">Safe headset volume</string>
     <string name="safe_headset_volume_summary">Prevent loud volume levels when headset is first plugged in</string>
     <string name="safe_headset_volume_warning_dialog_text">Listening at high volume for long periods may damage your hearing. Disable it with caution.</string>
+
+    <!-- Superuser header name - the app hides itself from launcher based on this resource name being present in com.android.settings -->
+    <string name="superuser_title">Superuser</string>
+    <string name="superuser_summary">Control root access</string>
 </resources>
