--- a/res/values/rr_strings.xml
+++ b/res/values/rr_strings.xml
@@ -2379,9 +2379,6 @@
    <string name="force_authorize_substratum_packages_title">Allow theme apps from unknown sources</string>
    <string name="force_authorize_substratum_packages_summary">Force authorize every theme app</string>
 
-    <string name="magisk_title">Magisk manager</string>
-    <string name="magisk_summary">Root management</string>
-
     <string name="notif_text_color">Text color</string>
     <string name="status_bar_expanded_empty_shade_view_settings_title">No notifications view</string>
     <string name="status_bar_expanded_empty_shade_view_settings_summary">Customize the no notifications view</string>
@@ -2487,4 +2484,8 @@
     <!-- Superuser header name - the app hides itself from launcher based on this resource name being present in com.android.settings -->
     <string name="superuser_title">Superuser</string>
     <string name="superuser_summary">Control root access</string>
+
+    <!-- Magisk header name - the app hides itself from launcher based on this resource name being present in com.android.settings -->
+    <string name="magisk_title">Magisk Manager</string>
+    <string name="magisk_summary">Control modules and settings</string>
 </resources>
