--- a/res/xml/development_prefs.xml
+++ b/res/xml/development_prefs.xml
@@ -462,4 +462,10 @@
         android:entries="@array/media_scanner_on_boot_entries"
         android:entryValues="@array/media_scanner_on_boot_values" />
 
+    <!-- Disable Signature Verification -->
+    <com.android.settings.rr.Preferences.SecureSettingSwitchPreference
+        android:defaultValue="false"
+        android:key="disable_signature"
+        android:title="@string/disable_signature_title"
+        android:summary="@string/disable_signature_summary" />
 </PreferenceScreen>
