--- a/res/values/rr_strings.xml
+++ b/res/values/rr_strings.xml
@@ -65,11 +65,7 @@
     <string name="rr_ls_gestures">Gestures</string>
     <string name="rr_ls_ui">Lock UI</string>
     <string name="rr_ls_security">Security</string>
-<<<<<<< HEAD
-    <string name="updater_title">Updates</string>
-=======
     <string name="updater_title">Unofficial OTA Updates</string>
->>>>>>> 0e22ec587... OpenDelta Settings
 
     <string name="altan_summary">● Founder \n● Project leader \n● Head developer \n● UX designer \n● Maintainer</string>
     <string name="varun_summary">● Head developer \n● UX designer \n● Maintainer</string>
@@ -111,7 +107,7 @@
     <string name="changelog_version">Version</string>
 
     <!--RR Configurations-->
-    <string name="fab_updates">Updates</string>
+    <string name="fab_updates">Unofficial Updates</string>
     <string name="fab_restartui">Restart UI</string>
     <string name="fab_reset">Reset</string>
     <string name="fab_about">About RR-OS</string>
