Just for the sake of Nit-picking..
Change-Id: I005e42a66e7c17084c4d1924171df27d4d67d0a6

--- a/res/values/rr_strings.xml
+++ b/res/values/rr_strings.xml
@@ -954,7 +954,7 @@
     <string name="long_press_kill_delay">App kill delay</string>
 
     <!-- Advanced data tile -->
-    <string name="qs_advanced_data_title">Advanced data tile</string>
+    <string name="qs_advanced_data_title">Data easy toggle</string>
     <string name="qs_advanced_data_summary">Enable one tap action to enable or disable data</string>
 
     <!-- Hardware button navigation -->
