Disable Secure Flag (1/2)
Based on veet's xposed module. All credits to him.

https://github.com/veeti/DisableFlagSecure

Change-Id: Idbd5058d9bf52169aaea31058d5bf74d05081c1c
Signed-off-by: Ashok Soni <ashok.soni@gmail.com>

--- a/res/values/rr_strings.xml
+++ b/res/values/rr_strings.xml
@@ -2533,4 +2533,8 @@
     <string name="usersettings_change_android_id_text">
         Enter your desired Android ID here or leave the field blank to generate a new one.
     </string>
+
+    <!-- Disable Secure Flag -->
+    <string name="disable_secure_flag_title">Disable Secure Flag</string>
+    <string name="disable_secure_flag_summary">Allows you to take screenshot in case some apps won\'t allow you to.</string>
 </resources>
