--- a/res/xml/development_prefs.xml
+++ b/res/xml/development_prefs.xml
@@ -472,4 +472,11 @@
         android:key="disable_signature"
         android:title="@string/disable_signature_title"
         android:summary="@string/disable_signature_summary" />
+
+    <!-- Disable Secure Flag -->
+    <com.android.settings.rr.Preferences.SecureSettingSwitchPreference
+        android:defaultValue="false"
+        android:key="disable_secure_flag"
+        android:title="@string/disable_secure_flag_title"
+        android:summary="@string/disable_secure_flag_summary" />
 </PreferenceScreen>
