Toogle isn't really a word..
Change-Id: I22e43f2a31b6cec52014aab13a495bd3ea7dd25b

--- a/res/values/rr_strings.xml
+++ b/res/values/rr_strings.xml
@@ -1908,7 +1908,7 @@
  
     <!-- Heads up switch -->
     <string name="heads_up_switch_title">Heads up</string>
-    <string name="heads_up_switch_summary">Toogle Heads up globally, not per app.</string>
+    <string name="heads_up_switch_summary">Toggle Heads up globally, not per app.</string>
     <string name="heads_up_settings">Heads up</string>
     <!-- Heads up timeout -->
     <string name="heads_up_time_out_title">Time out</string>
