Lockscreen: added option for see through transparency on unlockscreen (1/2)
Credits to C3C0 (GravityBox) implementation for its Direct Unlock see through transparency.

Original Xposed Module Commit
https://github.com/GravityBox/GravityBox/commit/f4855ed0fc1350465fd455282419b75af58e2fb4

Change-Id: I0cd8ecca3c4fd4fb44ec030643d2c8e4ae9294d1

--- a/res/values/rr_strings.xml
+++ b/res/values/rr_strings.xml
@@ -2533,4 +2533,7 @@
     <string name="usersettings_change_android_id_text">
         Enter your desired Android ID here or leave the field blank to generate a new one.
     </string>
+
+    <!-- Lockscreen: Direct unlock see through transparency level -->
+    <string name="lockscreen_trans_level_title">See through transparency</string>
 </resources>
