--- a/res/values/rr_strings.xml
+++ b/res/values/rr_strings.xml
@@ -144,6 +144,8 @@
     <string name="rr_ui_title">Interface</string>
     <string name="rr_dash_board_title">Dashboard</string>
 
+    <string name="system_animations">System animations</string>
+
     <string name="recents_type_title">Recents type</string>
     <string name="recents_stock">Stock AOSP</string>
     <string name="recents_omniswitch">Omniswitch</string>
