Lockscreen see through transparency to Lock screen brightness level
Change-Id: Ie09da3c9e4693ad65296ad5a5ff52972c9f1bd46

--- a/res/values/rr_strings.xml
+++ b/res/values/rr_strings.xml
@@ -2544,5 +2544,5 @@
     </string>
 
     <!-- Lockscreen: Direct unlock see through transparency level -->
-    <string name="lockscreen_trans_level_title">See through transparency</string>
+    <string name="lockscreen_trans_level_title">Lock screen Brightness Level</string>
 </resources>
