--- a/res/values/rr_strings.xml
+++ b/res/values/rr_strings.xml
@@ -2616,4 +2616,8 @@
     <string name="power_notifications_ringtone_silent">Silent</string>
     <!-- Sound settings, custom charging sound, setting check box label -->
     <string name="power_notifications_custom_ringtone_title">Custom notification sound</string>
+
+    <!-- Development Settings summary-->
+    <string name="adb_enabled">ADB Enabled</string>
+    <string name="adb_disabled">ADB Disabled</string>
 </resources>
