Show battery info on lockscreen by default
Change-Id: I8536ec96276197d6a10cde3d73bed245a85c7b21

--- a/res/xml/rr_ls_ui.xml
+++ b/res/xml/rr_ls_ui.xml
@@ -70,7 +70,7 @@
                 android:key="lockscreen_battery_info"
                 android:title="@string/lockscreen_battery_info_title"
                 android:summary="@string/lockscreen_battery_info_summary" 
-                android:defaultValue="false" />
+                android:defaultValue="true" />
 
     	<com.android.settings.rr.Preferences.SecureSettingSwitchPreference
                 android:key="lockscreen_hide_status_bar"
