Revert "Remove CM's Ambient Display."
This reverts commit 21794853698d082c55fd84d8f2fda4aaf80c9d24.

--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -92,14 +92,13 @@
                 android:summary="@string/heads_up_switch_summary"
                 android:defaultValue="true" />
 
-        <!--
         <cyanogenmod.preference.RemotePreference
                 android:key="doze_device_settings"
                 android:title="@string/doze_title"
                 android:summary="@string/doze_summary"
                 cm:replacesKey="doze">
             <intent android:action="org.cyanogenmod.settings.device.DOZE_SETTINGS" />
-        </cyanogenmod.preference.RemotePreference> -->
+        </cyanogenmod.preference.RemotePreference>
 
         <cyanogenmod.preference.CMGlobalSettingSwitchPreference
                 android:key="wake_when_plugged_or_unplugged"
