[3/3] Torch long press power: add auto-off function
Change-Id: I0463df7747356b62c1c510e7f3f79f6692a2b77c

--- a/res/values/rr_strings.xml
+++ b/res/values/rr_strings.xml
@@ -2620,4 +2620,7 @@
     <!-- Development Settings summary-->
     <string name="adb_enabled">ADB Enabled</string>
     <string name="adb_disabled">ADB Disabled</string>
+
+    <string name="torch_long_press_power_timeout_title">Automatically turn torch off</string>
+    <string name="auto_power_save_never">Never</string>
 </resources>
