--- a/res/xml/rr_ls_gesture.xml
+++ b/res/xml/rr_ls_gesture.xml
@@ -29,4 +29,12 @@
             android:summary="@string/keyguard_toggle_torch_summary"
             android:defaultValue="false" />
 
+        <ListPreference
+            android:key="torch_long_press_power_timeout"
+            android:dialogTitle="@string/torch_long_press_power_timeout_title"
+            android:title="@string/torch_long_press_power_timeout_title"
+            android:entries="@array/torch_long_press_power_timeout_entries"
+            android:entryValues="@array/torch_long_press_power_timeout_values"
+            android:dependency="keyguard_toggle_torch"
+            android:persistent="false" />
 </PreferenceScreen>
