[device info] Display SDClang Versions: [1/2]
Change-Id: I33faf5290c9da5f726b0bf7e307ff0b8c594431b
Signed-off-by: Eliminater74 <eliminater74@gmail.com>

--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -223,4 +223,10 @@
                 settings:allowDividerAbove="true"
                 settings:allowDividerBelow="true"/>
 
+        <!-- SDClang used -->
+        <Preference android:key="build_compiler_sdclang"
+            style="?android:preferenceInformationStyle"
+            android:title="@string/build_compiler_sdclang"
+            android:summary="@string/build_compiler_default" />
+
 </PreferenceScreen>
