[3/3] Settings: Disable ADB over network on disconnect
ADB over network is not disabled before the next reboot, which creates
a potential security threat when this setting is left enabled and the
device gets re-connected to public wifi networks.

To mitigate that risk, introduce a new switch to disable ADB over network
as soon as the device gets disconnected from wifi.

Change-Id: Ib2312178d7d844e8f98c9164d00126572393f269

--- a/res/values/rr_strings.xml
+++ b/res/values/rr_strings.xml
@@ -2618,4 +2618,7 @@
 
     <string name="logcat_app_title">MatLog</string>
     <string name="logcat_app_summary">Start app to collect logs</string>
+
+    <string name="adb_over_network_disable_on_disconnect_title">Disable ADB over network on disconnect</string>
+    <string name="adb_over_network_disable_on_disconnect_summary">ADB over network will be disabled when disconnecting from Wi-Fi</string>
 </resources>
