--- a/res/xml/development_prefs.xml
+++ b/res/xml/development_prefs.xml
@@ -157,6 +157,13 @@
             android:inputType="textNoSuggestions"
             android:persistent="false" />
 
+        <com.android.settings.rr.Preferences.SystemSettingSwitchPreference
+            android:key="disable_adb_network_on_disconnect"
+            android:title="@string/adb_over_network_disable_on_disconnect_title"
+            android:summary="@string/adb_over_network_disable_on_disconnect_summary"
+            android:dependency="adb_over_network"
+            android:defaultValue="true" />
+
         <SwitchPreference
             android:key="enable_terminal"
             android:title="@string/enable_terminal_title"
