--- a/res/values/rr_strings.xml
+++ b/res/values/rr_strings.xml
@@ -2662,4 +2662,8 @@
     <string name="doze_trigger_notification_summary_off">Notifications will not be utilized as a trigger</string>
     <string name="doze_brightness_title">Doze brightness level</string>
     <string name="doze_brightness_summary">Brightness level of doze pulse screen (% of max allowed brightness)</string>
+
+    <!-- MTP Dirty Hack -->
+    <string name="enable_mtp_dirtyhack_title">MTP instead Charging</string>
+    <string name="enable_mtp_dirtyhack_summary">Enable MTP instead Charging after connect to PC</string>
 </resources>
