--- a/res/xml/rr_misc.xml
+++ b/res/xml/rr_misc.xml
@@ -27,6 +27,12 @@
             android:summary="@string/sensor_block_summary"
             android:defaultValue="false" />
 
+    <com.android.settings.rr.Preferences.SystemSettingSwitchPreference
+            android:key="mtp_dirty_hack"
+            android:title="@string/enable_mtp_dirtyhack_title"
+            android:summary="@string/enable_mtp_dirtyhack_summary"
+            android:defaultValue="true" />
+
         <!-- Weather Settings -->
         <PreferenceScreen
             android:id="@+id/weather_settings"
