Settings: add hook to start MatLog
Change-Id: Icd72151eeab4732fc0e8e7821553cd25a4ef6974

--- a/res/values/rr_strings.xml
+++ b/res/values/rr_strings.xml
@@ -2616,4 +2616,6 @@
     <string name="single_tap_tile_add_title">Easy tile add</string>
     <string name="single_tap_tile_add_summary">Add quick tiles easily from qs customizer by simply tapping on them instead of dragging them</string>
 
+    <string name="logcat_app_title">MatLog</string>
+    <string name="logcat_app_summary">Start app to collect logs</string>
 </resources>
