Remove OmniSwitch preference if removed.
Change-Id: Id9e0eac61c4b451f2b7250d09c5cf8ae6c620507

--- a/res/values/rr_arrays.xml
+++ b/res/values/rr_arrays.xml
@@ -2127,4 +2127,15 @@
         <item>600</item>
     </string-array>
 
+    <string-array name="recents_type_title_entries_2">
+        <item>@string/recents_stock</item>
+        <item>@string/recents_grid</item>
+        <item>@string/recents_slim</item>
+    </string-array>
+
+    <string-array name="recents_type_title_values_2" translatable="false">
+        <item>0</item>
+        <item>2</item>
+        <item>3</item>
+    </string-array>
 </resources>
