--- a/res/values/rr_strings.xml
+++ b/res/values/rr_strings.xml
@@ -2644,4 +2644,11 @@
     <string name="lockscreen_alpha">Lockscreen alpha</string>
     <string name="lockscreen_security_alpha">Lockscreen bouncer alpha</string>
 
+    <!--Change SMSM Sending Limit --> 
+    <string name="usersettings_change_sms_limit">Change SMS sending maximum limit</string> 
+    <string name="usersettings_change_sms_limit_text">
+        Enter the maximum no. of messages you want to send in a minute so that limit can be set.
+    </string>
+
+
 </resources>
