Switch to show Am/Pm indictor on lockscreen (1/2)
Change-Id: Iece824351c7c0cd411d43e9b3e09189775223c9a
Signed-off-by: Ashok Soni <ashok.soni@gmail.com>

--- a/res/values/rr_strings.xml
+++ b/res/values/rr_strings.xml
@@ -2621,4 +2621,6 @@
 
     <string name="adb_over_network_disable_on_disconnect_title">Disable ADB over network on disconnect</string>
     <string name="adb_over_network_disable_on_disconnect_summary">ADB over network will be disabled when disconnecting from Wi-Fi</string>
+
+    <string name="show_ampm_title">Show AM/PM indicator with lockscreen clock</string>
 </resources>
