--- a/res/values/rr_strings.xml
+++ b/res/values/rr_strings.xml
@@ -2625,7 +2625,7 @@
     <!-- Dashboard -->
     <string name="header_category_custom">ROM Control</string>
 
-    <!-- Double tap for doze -->
+    <!-- SlimDoze -->
     <string name="display_category_doze_options_title">Ambient display (doze) options</string>
     <string name="doze_settings_title">Advanced doze options</string>
     <string name="doze_fade_in_pickup_title">Doze pulse fade in (pickup)</string>
@@ -2642,6 +2642,9 @@
     <string name="doze_trigger_pickup_title">Pick up gesture trigger</string>
     <string name="doze_trigger_pickup_summary_on">Doze pulse will be triggered by pick up gesture sensor events (default)</string>
     <string name="doze_trigger_pickup_summary_off">Pick up gesture sensor will not be utilized as a triggering mechanism</string>
+    <string name="doze_trigger_tilt_title">Tilt gesture trigger</string>
+    <string name="doze_trigger_tilt_summary_on">Doze pulse will be triggered by tilt gesture sensor events (default)</string>
+    <string name="doze_trigger_tilt_summary_off">Tilt gesture sensor will not be utilized as a triggering mechanism</string>
     <string name="doze_trigger_sigmotion_title">Significant motion trigger</string>
     <string name="doze_trigger_sigmotion_summary_on">Doze pulse will be triggered by significant motion sensor events (default)</string>
     <string name="doze_trigger_sigmotion_summary_off">Significant motion sensor will not be utilized as a triggering mechanism</string>
