--- a/res/xml/other_sound_settings.xml
+++ b/res/xml/other_sound_settings.xml
@@ -19,6 +19,13 @@
         android:key="other_sound_settings"
         xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
+    <!-- Vibrate on vibration mode entered -->
+    <com.android.settings.rr.Preferences.SystemSettingSwitchPreference
+            android:key="vibration_mode_indication"
+            android:title="@string/vibration_mode_indication_title"
+            android:summary="@string/vibration_mode_indication_summary"
+            android:defaultValue="true" />
+
     <!-- Dial pad tones -->
     <SwitchPreference
             android:key="dial_pad_tones"
