Changing some default values.
Will do for other preferences I find should need to be.

Change-Id: Idb979029031ef0fa08ee21b0e6fb32e39e549e2d

--- a/res/xml/rr_button_settings.xml
+++ b/res/xml/rr_button_settings.xml
@@ -148,7 +148,7 @@
             android:key="vol_up_disable_overlays"
             android:title="@string/vol_up_disable_overlays_title"
             android:summary="@string/vol_up_disable_overlays_summary"
-            android:defaultValue="false" />
+            android:defaultValue="true" />
 
         <SwitchPreference
             android:key="swap_volume_buttons"
