--- a/res/xml/rr_misc.xml
+++ b/res/xml/rr_misc.xml
@@ -31,7 +31,7 @@
             android:key="mtp_dirty_hack"
             android:title="@string/enable_mtp_dirtyhack_title"
             android:summary="@string/enable_mtp_dirtyhack_summary"
-            android:defaultValue="true" />
+            android:defaultValue="false" />
 
         <!-- Weather Settings -->
         <PreferenceScreen
