Settings: Add setting in security for sms message rate alerts.
Currently this is null so it defaults to 30 sms messages in a 1 min period.
Creating and writing this preference allows us to control the sms rate interface.
We can also modify timeframe as well but that'll be later maybe.

This was added to Misc instead of sms or security since this isn't just rate limiting the
sms application.  This rate limits any application that sends texts.

This also creates a new category called Application Security.

@ashoksoni edits:
Added retrieving system values to show on onCreate else it was showing default values always.
Also retrieve current values when clicking on listpreference.

Change-Id: I4abb71011aa79e9346401b2f2255f380109740fa
Signed-off-by: Ashok Soni <ashok.soni@gmail.com>

--- a/res/values/rr_strings.xml
+++ b/res/values/rr_strings.xml
@@ -2677,4 +2677,11 @@
     <string name="reset_settings_title">Feature preferences</string>
     <string name="reset_settings_summary">Reset Paranoid Android feature preferences</string>
     <string name="keywords_settings_reset">reset</string>
+
+    <!--- Sms security limit -->
+    <string name="app_security_title">Advanced</string>
+    <string name="sms_security_check_limit_title">SMS message limit</string>
+    <string name="sms_security_check_limit_summary">Display an alert dialog to prevent applications from sending SMS messages too frequently. Current limit: %d messages in 1 minute</string>
+    <string name="sms_security_check_limit_default">30 (Default)</string>
+    <string name="sms_security_check_limit_unlimited">0 (Unlimited)</string>
 </resources>
