--- a/res/values/rr_arrays.xml
+++ b/res/values/rr_arrays.xml
@@ -2113,4 +2113,21 @@
         <item>2</item>
         <item>3</item>
     </string-array>
+
+    <!--- Sms security limit -->
+    <string-array name="sms_security_check_limit_entries" translatable="false">
+        <item>@string/sms_security_check_limit_default</item>
+        <item>100</item>
+        <item>500</item>
+        <item>1000</item>
+        <item>@string/sms_security_check_limit_unlimited</item>
+    </string-array>
+
+    <string-array name="sms_security_check_limit_values" translatable="false">
+        <item>30</item>
+        <item>100</item>
+        <item>500</item>
+        <item>1000</item>
+        <item>0</item>        
+    </string-array>
 </resources>
