--- a/res/xml/rr_misc.xml
+++ b/res/xml/rr_misc.xml
@@ -124,4 +124,17 @@
             android:summary="@string/system_app_remover_summary"
             android:fragment="com.android.settings.rr.fragments.SystemappRemover" />
 
+        <PreferenceCategory
+            android:key="app_security"
+            android:title="@string/app_security_title">
+
+            <ListPreference
+                android:key="sms_security_check_limit"
+                android:dialogTitle="@string/sms_security_check_limit_title"
+                android:title="@string/sms_security_check_limit_title"
+                android:entries="@array/sms_security_check_limit_entries"
+                android:entryValues="@array/sms_security_check_limit_values"
+                android:defaultValue="30" />
+
+        </PreferenceCategory>
 </PreferenceScreen>
