Enable Single tap tile switch by default
Change-Id: Ifd5852263a9333db092bfccd86e44d35c2193270

--- a/res/xml/rr_qs_advanced.xml
+++ b/res/xml/rr_qs_advanced.xml
@@ -73,7 +73,7 @@
             android:key="quick_tile_add"
             android:title="@string/single_tap_tile_add_title"
             android:summary="@string/single_tap_tile_add_summary"
-            android:defaultValue="false"/>
+            android:defaultValue="true"/>
 
         <com.android.settings.rr.Preferences.SystemSettingSwitchPreference
             android:key="music_tile_title"
