--- a/res/layout/fab_main.xml
+++ b/res/layout/fab_main.xml
@@ -29,12 +29,11 @@
     android:id="@+id/fab_menu"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_gravity="right|bottom"
+    android:layout_gravity="end|bottom"
     fab:fab_addButtonColorNormal="@color/fab_rr_bg"
     fab:fab_addButtonPlusIconColor="@color/fab_button_icon_color"
     fab:fab_addButtonStrokeVisible="false"
-    fab:fab_labelStyle="@style/menu_labels_style"
-    fab:fab_labelsPosition="left">
+    fab:fab_labelStyle="@style/menu_labels_style">
 
     <com.android.settings.rr.fab.FloatingActionButton
         android:id="@+id/fab_event"
