--- a/res/xml/rr_interface_other_settings.xml
+++ b/res/xml/rr_interface_other_settings.xml
@@ -43,4 +43,12 @@
             android:icon="@drawable/rr_burn_in_icon"
             cm:requiresConfig="@*cyanogenmod.platform:bool/config_enableBurnInProtection"/>
 
+    <com.android.settings.rr.Preferences.SystemSettingSwitchPreference
+            android:key="rr_ota_fab_size"
+            android:title="@string/rr_ota_fab_size_title"
+            android:summary="@string/rr_ota_fab_size_summary"
+            android:icon="@drawable/rr_display_icon"
+            android:defaultValue="false"
+            android:dependency="rr_ota_fab" />
+
 </PreferenceScreen>
