--- a/res/values/rr_strings.xml
+++ b/res/values/rr_strings.xml
@@ -2717,9 +2717,9 @@
     <!--- Sms security limit -->
     <string name="app_security_title">Advanced</string>
     <string name="sms_security_check_limit_title">SMS message limit</string>
-    <string name="sms_security_check_limit_summary">Display an alert dialog to prevent applications from sending SMS messages too frequently. Current limit: %d messages in 1 minute</string>
+    <!--- string name="sms_security_check_limit_summary">Display an alert dialog to prevent applications from sending SMS messages too frequently. Current limit: %d messages in 1 minute</string -->
+    <string name="sms_security_check_limit_summary">Current limit: %d messages in 1 minute</string>
     <string name="sms_security_check_limit_default">30 (Default)</string>
-    <string name="sms_security_check_limit_unlimited">None</string>
 
     <!-- Smart cover -->
     <string name="smart_cover_title">Smart cover</string>
